--- a/site.css
+++ b/site.css
@@ -18,4 +18,34 @@ body{
     font-size: 200%;
     justify-content: center;
     align-items: center;
+    color: rgb(51, 52, 52);
+}
+.line1{
+    border-bottom: solid 1px;
+    width: 50%;
+}
+
+.flexbox{
+    display: flex;
+}
+.texto1{
+    padding: 10%;
+    text-align:left;
+    height: 70%;
+    width: 30%;
+    font-size: 110%;
+    justify-content: left;
+    align-items: left;
+    
+}
+
+.texto2{
+    padding: 10%;
+    text-align: left;
+    height: 70%;
+    width: 30%;
+    font-size: 110%;
+    justify-content: flex-end;
+    align-items: flex-end;
+    
 }
