--- a/site.css
+++ b/site.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 
 body{
@@ -12,6 +13,7 @@ body{
     font-size: 300%;
     justify-content: center;
     align-items: center;
+   
 }
 .frase{
     text-align: center;
@@ -21,6 +23,7 @@ body{
     justify-content: center;
     align-items: center;
     color: rgb(51, 52, 52);
+    font-family: "Inter", sans-serif;
 }
 .line1{
     border-bottom: solid 1px;
@@ -31,7 +34,6 @@ body{
     display: flex;
     background-size: cover ;
     padding: 20px;
-    
     border-radius: 8px; 
   }
 
@@ -45,6 +47,7 @@ body{
     font-size: 110%;
     justify-content: flex-start;
     align-items: flex-start;
+    font-family: "Inter", sans-serif;
     
 }
 
@@ -57,6 +60,7 @@ body{
     font-size: 110%;
     justify-content: flex-end;
     align-items: flex-end;
+    font-family: "Inter", sans-serif;
     
 }
 
@@ -67,7 +71,8 @@ body{
     position: block;
     margin-top: -210px;
     height: 30%;
-    width: 30%
+    width: 30%;
+    font-family: "Inter", sans-serif;
 }
 
 .line2{
@@ -90,6 +95,7 @@ body{
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
     border: 1px solid rgba(255, 255, 255, 0.1);
     text-align: center;
+    font-family: "Inter", sans-serif;
 }
 
 .box{
@@ -107,5 +113,41 @@ body{
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
     border: 1px solid rgba(255, 255, 255, 0.1);
     text-align: flex-start;
+    font-family: "Inter", sans-serif;
 }
 
+.button {
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-weight: 500;
+    background-color: #ffffff;
+    color: #000000;
+    border: none;
+    border-radius: 4px;
+    padding: 6px 12px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    margin-top: 30px;
+    width: 20%;
+    height: 2%;
+    text-decoration: none;
+   
+}
+
+.button:hover {
+    background-color: #ff0000;
+    transform: translateY(-2px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.button:active {
+    transform: translateY(0);
+    box-shadow: none;
+}
+
+.button:focus {
+    outline: 2px solid rgb(147, 167, 184);
+    outline-offset: 2px;
+}
