--- a/site.css
+++ b/site.css
@@ -13,6 +13,8 @@ body{
     font-size: 300%;
     justify-content: center;
     align-items: center;
+    font-family: "Inter", sans-serif;
+
    
 }
 .frase{
@@ -30,49 +32,71 @@ body{
     width: 50%;
 }
 
-.flexbox{
+.flexbox {
     display: flex;
-    background-size: cover ;
-    padding: 20px;
-    border-radius: 8px; 
-  }
-
-
-.texto1{
-    color: rgb(0, 0, 0);
-    padding: 10%;
-    text-align:left;
-    height: 70%;
-    width: 30%;
-    font-size: 110%;
-    justify-content: flex-start;
-    align-items: flex-start;
-    font-family: "Inter", sans-serif;
-    
+    justify-content: center;
+    align-items: flex-start; /* Alinha no topo */
+    background: rgb(195, 205, 213);
+    padding: 40px;
+    border-radius: 8px;
+    width: 70%;
+    margin: 20px auto;
 }
 
-.texto2{
-    color: rgb(0, 0, 0);
-    padding: 10%;
-    text-align: left;
-    height: 70%;
-    width: 30%;
+.texto1 {
+    flex: 1;
+    color: #050505;
     font-size: 110%;
-    justify-content: flex-end;
-    align-items: flex-end;
     font-family: "Inter", sans-serif;
-    
+    margin-right: 30px;
+    text-align: justify;
 }
+
 
 .img1{
-    padding: 5%;
-    justify-content: center;
-    align-items: center;
-    position: block;
-    margin-top: -210px;
-    height: 30%;
-    width: 30%;
-    font-family: "Inter", sans-serif;
+    padding: 0%;
+    margin-top: 10px;
+    height: 75%;
+    width: 100%;
+    margin-right: 5px;
+    border-radius: 30px;
+}
+
+.img2 {
+    margin-top: auto;
+    margin-inline: auto;
+    margin-bottom: 20px; 
+    margin-right: 5px;
+    width: auto;
+    height: auto;
+    border-radius: 30px;
+}
+
+.img3 {
+    margin-top: auto;
+    margin-inline: auto;
+    margin-bottom: 20px; 
+    margin-right: 5px;
+    width: auto;  
+    height: auto; 
+    border-radius: 30px;
+}
+
+.img4{
+    padding: 0%;
+    margin-top: 10px;
+    height: 25%;
+    width: 22%;
+    margin-right: 5px;
+    border-radius: 30px;
+}
+
+.img{
+    margin-top: 10px;
+    height: 75%;
+    width: 72%;
+    margin-right: 5px;
+    border-radius: 30px;
 }
 
 .line2{
