--- a/site.css
+++ b/site.css
@@ -41,6 +41,7 @@ body{
     border-radius: 8px;
     width: 70%;
     margin: 20px auto;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
 }
 
 .texto1 {
